# VocalTractLabBackend-dev

./: .gitignore  Acoustic3dSimulation.cpp  Acoustic3dSimulation.h  AnatomyParams.cpp  AnatomyParams.h  CMakeLists.txt  CODEOWNERS  Constants.h  CrossSection2d.cpp  CrossSection2d.h  Delaunay_mesh_vertex_base_with_info_2.h  Dsp.cpp  Dsp.h  F0EstimatorYin.cpp  F0EstimatorYin.h  GeometricGlottis.cpp  GeometricGlottis.h  Geometry.cpp  Geometry.h  GesturalScore.cpp  GesturalScore.h  Glottis.cpp  Glottis.h  GlottisFactory.cpp  GlottisFactory.h  IirFilter.cpp  IirFilter.h  ImpulseExcitation.cpp  ImpulseExcitation.h  JD2_new.speaker  JD3.speaker  LfPulse.cpp  LfPulse.h  Matrix2x2.cpp  Matrix2x2.h  PoleZeroPlan.cpp  PoleZeroPlan.h  README.md  Sampa.cpp  Sampa.h  (+46 more)
.github/workflows/: cmake.yml  cmake_examples.yml  examples.yml  matlab_examples.yml  msbuild.yml  python_examples.yml
Unit Tests/: Unit Tests.vcxproj  test.cpp
examples/: ala.ges  apfelsine-ema.txt  apfelsine.ges  apfelsine.seg  apfelsine.txt  example1.asv  example1.m  example1.py  example2.m  example2.py  example3.m  example3.py  example4.py  example5.m  example5.py  example6.py  requirements.txt
examples/Meshes/: animation.py  convert_directory.py
include/VocalTractLabApi/: VocalTractLabApi.h
include/VocalTractLabBackend/: GesturalScore.h  GesturalScoreWithHistory.h  SoundLib.h  Speaker.h  TlModel.h  Tube.h  TwoMassModel.h  VocalTract.h
lib/: VocalTractLabApi.exp  VocalTractLabApi.lib
resources/: JD3.speaker
src/: CMakeLists.txt  LfPulse.cpp  LfPulse.h  TdsModel.h  VocalTract.h  VocalTractLabApi.cpp  XmlHelper.cpp
src/VocalTractLabApi/: VocalTractLabApi.cpp  VocalTractLabApi.def
src/VocalTractLabBackend/: AnatomyParams.cpp  Dsp.cpp  F0EstimatorYin.cpp  GeometricGlottis.cpp  Geometry.cpp  GesturalScore.cpp  GesturalScoreWithHistory.cpp  Glottis.cpp  GlottisFactory.cpp  IirFilter.cpp  ImpulseExcitation.cpp  LfPulse.cpp  Matrix2x2.cpp  PoleZeroPlan.cpp  Sampa.cpp  SegmentSequence.cpp  Signal.cpp  Speaker.cpp  Splines.cpp  StaticPhone.cpp  Surface.cpp  Synthesizer.cpp  TdsModel.cpp  TimeFunction.cpp  TlModel.cpp  TriangularGlottis.cpp  Tube.cpp  TwoMassModel.cpp  VocalTract.cpp  VoiceQualityEstimator.cpp  VowelLf.cpp  XmlHelper.cpp  XmlNode.cpp
test/: VtlApiTests.cpp  VtlBackendTests.cpp
test/resources/: example01.ema
